Updated Vision sub-headings

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <body>
         <h1>Improved Finance - iFi</h1>
         <h2>Our Vision</h2>
+            <h3>Mass Adoption</h3>
+            <h3>Hardcoded Equal Opportunity</h3>
+            <h3>Decentralized Autonymous Operation</h3>
         <h2>The iFi Token</h2>
             <h3>Governance</h3>
             <h3>Utility</h3>
             <h3>Tokenomics</h3>
         <h2>The iFi Market</h2>
-            <h3>Decentralized</h3>
-            <h3>Autonymous and Trustless</h3>
+            <h3>Public Markets</h3>
+            <h3>Private Markets</h3>
+            <h3>Boundless Potential</h3>
         <h2>Consumer Solutions</h2>
             <h3>Simple</h3>
             <h3>Convenient</h3>
