--- a/index.html
+++ b/index.html
@@ -4,35 +4,16 @@
     <head>
         <meta charset="utf-8">
         <title>Improved Finance</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Improved Finance - iFi</h1>
-        <h2>Our Vision</h2>
-            <h3>Mass Adoption</h3>
-            <h3>Hardcoded Equal Opportunity</h3>
-            <h3>Decentralized Autonymous Operation</h3>
-        <h2>The iFi Token</h2>
-            <h3>Governance</h3>
-            <h3>Utility</h3>
-            <h3>Tokenomics</h3>
-        <h2>The iFi Market</h2>
-            <h3>Public Markets</h3>
-            <h3>Private Markets</h3>
-            <h3>Boundless Potential</h3>
-        <h2>Consumer Solutions</h2>
-            <h3>Simple</h3>
-            <h3>Convenient</h3>
-            <h3>Trustless</h3>
-            <h3>Private</h3>
-        <h2>Enterprise Solutions</h2>
-            <h3>Mitigate Transaction Fees</h3>
-            <h3>Seemless Inventory Integration</h3>
-            <h3>Countless Tax Benefits</h3>
-            <h3>Private Market Functionality</h3>
-        <h2>Production Solutions</h2>
-            <h3>Defect Tracing</h3>
-            <h3>Bulk Generation</h3>
-            <h3>Transparent Production</h3>
+        <div class="head section">
+            <button class="head-buttons">Vision</button>
+        </div>
+        <div class="body section">
+            <h1 class="title">Improved Finance - iFi</h1>
+            <h2 class="title" id="about">Our Vision</h2>
+        </div>
     </body>
 </html>
